--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -1,7 +1,7 @@
 :root {
 	--primary: blue;
-	--secondary: white;
-	--background: #FFF0EB;
+	--secondary: orange;
+	--background: white;
 }
 
 *, *:before, *:after {
@@ -12,7 +12,7 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: "Avenir", "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 }
 
 body {
