--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,6 @@
 <footer>
   <small>
-    This project is maintained by <a href="https://www.danurbanowicz.com">Dan Urbanowicz</a>.
+    This project is maintained by <a href="https://www.davidrhoden.com">David Rhoden</a>. It's based on eleventy-netlify-boilerplate <a href="https://www.danurbanowicz.com">Dan Urbanowicz</a>.
     Check out the <a href="{{ pkg.repository.url }}">GitHub repo</a>.
   </small>
 </footer>
