--- a/_includes/components/postslist.njk
+++ b/_includes/components/postslist.njk
@@ -33,3 +33,25 @@
 		</article>
 	{% endfor %}
 </section>
+
+<!-- Pagination links -->
+<div>
+  {% if pagination.previousPageHref %}
+    <a href="{{ pagination.previousPageHref }}" class="page-numbers">Back to the future.</a>
+  {% else %}
+    <span class="page-numbers">You've reached the present.</span>
+  {% endif %}
+  <span>
+    Page {{ pagination.pageNumber + 1 }} of {{ pagination.links | length  }}.
+  </span>
+  {% if pagination.nextPageHref %}
+    <a href="{{ pagination.nextPageHref }}" class="page-numbers">Forward to the past.</a>
+  {% else %}
+    <span class="page-numbers">You've reached the beginning.</span>
+  {% endif %}
+  <ul class="pagination">
+  {%- for pageEntry in pagination.pages %}
+    <li><a href="{{ pagination.hrefs[ loop.index0 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}>{{ loop.index }}</a></li>
+  {%- endfor %}
+  </ul>
+</div>
