--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -1,7 +1,7 @@
 :root {
-	--primary: blue;
+	--primary: black;
 	--secondary: orange;
-	--background: white;
+	--background: lightblue;
 }
 
 *, *:before, *:after {
@@ -20,10 +20,17 @@ body {
 	height: 100vh;
 	grid-template-rows: auto 1fr auto;
 	background-color: var(--background);
+	text-align: center;
 }
 
 main {
-	max-width: 37.5em;
+	max-width: 50em;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+main span {
+
 }
 
 p,
