--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -8,6 +8,8 @@
     {% include "assets/css/inline.css" %}
   {% endset %}
   <style>{{ css | safe }}</style>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
   {% set js %}
     {% include "assets/js/inline.js" %}
   {% endset %}
