--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -1,18 +1,28 @@
 <head>
   <meta charset="utf-8">
-  <link rel="dns-prefetch" href="https://identity.netlify.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title or renderData.title or metadata.title }}</title>
-  <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {% set css %}
     {% include "assets/css/inline.css" %}
+    {% include "assets/css/slideshow.css" %}
+    {% include "assets/css/hamburgers.css" %}
   {% endset %}
   <style>{{ css | safe }}</style>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
+      <link rel='stylesheet' id='hamburgers-css' href='_includes/assets/css/hamburgers.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='google-zilla-slab-css' href='https://fonts.googleapis.com/css?family=Zilla+Slab:400,700,700i&display=swap' type='text/css' media='all' />
+
+    <link rel="canonical" href="https://gingerbreadshotgun.netlify.app/" />
+    <link rel='shortlink' href='https://gingerbreadshotgun.netlify.app/' />
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
   {% set js %}
     {% include "assets/js/inline.js" %}
   {% endset %}
   <script>{{ js | safe }}</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/CSSRulePlugin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/MotionPathPlugin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
   {% seo "" %}
 </head>
