--- a/_includes/assets/css/slideshow.css
+++ b/_includes/assets/css/slideshow.css
@@ -1,9 +1,24 @@
-#viewport {
-	display: flex;
-	height: 75vh;
-	position:relative;
-	text-align: center;
+#viewport{
+  display: grid;
+  grid-template-columns: 0.2fr 2.6fr 0.2fr;
+  grid-template-rows: 1fr;
+  gap: 0em 0em;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "buttonLeft viewportCenter buttonRight";
+  width: 100%;
+  height: 90vh;
 }
+
+#buttonLeft { grid-area: buttonLeft; }
+
+.viewportCenter { 
+	grid-area: viewportCenter;
+	position: relative; 
+}
+
+#buttonRight { grid-area: buttonRight; }
+
 
 #viewport p, #viewport li {
 	height: 65vh;
@@ -11,8 +26,11 @@
 	width: 100%;
 }
 
-#viewport p img, #viewport li img {
-	max-width: 300px;
+#viewport div p img, #viewport div li img {
+	border-radius:  2em;
+	position: absolute;
+	top: 0;
+	left: 0;
 	opacity: 0;
 	transition: opacity 1s ease-in-out;
     -moz-transition: opacity 1s ease-in-out;
@@ -23,11 +41,15 @@
   	opacity: 1;
 }
 
-button {
+#viewport button {
+	background-color: transparent;
+	border-width: 0px;
 	display: grid;
 	height: 100%;
 	padding: 0;
-    width: 2em;
+    width: 100%;
+    line-height: 100vh;
+  	white-space: nowrap;
 }
 
 #caption {
@@ -41,19 +63,18 @@ button {
 	}
 
 	#viewport p img, #viewport li img{ 
-		height: 100%;
-		max-width: inherit;
+		position: absolute;
+		top: 0;
+		left: 0;
+		max-width: 100%;
 		width: auto;
 	}
 
-	button {
+	#viewport button {
 		display: grid;
+		vertical-align: middle;
 		height: 100%;
 		padding: 0;
-	    width: 2em;
-	}
-
-	#buttonNext {
-		outline:  3px dashed yellowgreen;
+	    width: 100%;
 	}
 }
