--- a/_includes/layouts/gallery.njk
+++ b/_includes/layouts/gallery.njk
@@ -6,9 +6,9 @@ section: page
 <h1>{{ title }}</h1>
 
 <div id="viewport">
-	<button id="buttonPrevious">&#10094;</button>
-	<div>{{ layoutContent | safe }}</div>
-	<button id="buttonNext">&#10095;</button>
+	<button id="buttonLeft">&#10094;</button>
+	<div class="viewportCenter">{{ layoutContent | safe }}</div>
+	<button id="buttonRight">&#10095;</button>
 </div>
 <div class="flex row-reverse space-between">
 	<div id="caption"></div>
