--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,10 +4,19 @@
 
 	<body class="{% if pageType %}{{ pageType }}{% endif %} {{ page.fileSlug }} {{ pageClasses }}">
 
-		<header>
-			<em>{{ metadata.title }}</em>
-			{% include "components/nav.njk" %}
-		</header>
+        <header>
+            <div class="flex">
+                <a class="main-link" href="{{ '/' | url }}"><em>{{ metadata.title }}</em></a>
+                <div class="mobile-menu">
+                    <button class="hamburger hamburger--squeeze" aria-label="Menu" aria-controls="primary-menu" aria-expanded="false" type="button">
+                        <span class="hamburger-box">
+                            <span class="hamburger-inner"></span>
+                        </span>
+                    </button>
+                </div>
+            </div>
+            {% include "components/nav.njk" %}
+        </header>
 
 		<main>
 			{{ layoutContent | safe }}
