--- a/_includes/assets/css/hamburgers.css
+++ b/_includes/assets/css/hamburgers.css
@@ -10,17 +10,19 @@ header nav {
 }
 
 header nav.is-active {
-    display: block;
-    position: absolute;
+    background: white;
+    display: grid;
+    height: 100vh;
     margin:  -1em 0 0 -1em;
-    height: 100%;
+    place-items:  center;
+    position: absolute;
     width: 100%;
-    background: yellow;
+    
 }
 
 header nav.is-active li {
   display: block;
-  font-family: sans-serif;
+  font-family: "DomaineDisplay", sans-serif;
   padding: 1em;
 }
 
@@ -43,6 +45,7 @@ button.hamburger {
   margin: 0;
   padding: 0;
   overflow: visible; 
+  z-index: 10;
 }
   .hamburger:hover {
     opacity: 0.7; 
