--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,5 +1,5 @@
 <footer>
   <small>
-    &copy Pop d'Art.
+    <img src="/static/img/pdart-logo-blue.svg" style="width: 109px;">
   </small>
 </footer>
