--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -182,7 +182,7 @@ h1 {
 }
 
 .section.intro p {
-	font-size: 1.8em; 
+	font-size: 1.5em; 
 	line-height:  1;
 	text-align: center;
 }
@@ -333,6 +333,10 @@ button, .button {
 
 	.wrapper {
 		max-width: 75vw;
+	}
+
+	.section.intro p {
+		font-size: 1.8em; 
 	}
 
 	.section {
