--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -30,7 +30,7 @@
 	--title: #d8e433;
 	--darkyellow: #f2d87f;
 	--text: rgb(0 0 0 / 59%);
-	--white:  whitesmoke;
+	--white: white;
 	--gingerbread: #ca994e;
 }
 
@@ -64,32 +64,6 @@ p {
 	padding: 1em 1em 0;
 }
 
-.about h1 {
-	display: none;
-}
-
-.about h1.show {
-	display: block;
-	line-height: 1;
-}
-
-.section.about-intro {
-	background: var(--darkyellow);
-	padding: 0;
-}
-
-.section.about-intro .left-side {
-	background: palegoldenrod;
-	margin:  10%;
-	padding:  10%;
-}
-
-.section.about-intro .right-side {
-	background: url(/static/img/joshua-doguet-kmnz1L1xSWU-unsplash.jpg) no-repeat center center;
-	background-size: cover;
-	height:  100%;
-}
-
 a[href],
 a[href]:visited {
 	color: var(--primary);
@@ -104,6 +78,7 @@ img {
 
 footer {
 	background-color: rgba(2, 0, 36, .8);
+	border-bottom: ipx solid whitesmoke;
 	color: whitesmoke;
 	font-family: sans-serif;
 	padding:  3em;
@@ -163,8 +138,13 @@ h1 {
 	font-family: "DomaineDisplay", sans-serif;
 }
 
-.home h1 {
+.home h1, .about h1, .contact h1, .order h1 {
 	display: none;
+}
+
+.about h1.show, .contact h1.show, .order h1.show {
+	display: block;
+	line-height: 1;
 }
 
 .section {
@@ -175,10 +155,27 @@ h1 {
 	padding: 1em;
 }
 
+.section.about-intro {
+	background: var(--darkyellow);
+	padding: 0;
+}
+
+.section.about-intro .left-side {
+	background: palegoldenrod;
+	margin:  10%;
+	padding:  10%;
+}
+
+.section.about-intro .right-side {
+	background: url(/static/img/joshua-doguet-kmnz1L1xSWU-unsplash.jpg) no-repeat center center;
+	background-size: cover;
+	height:  100%;
+}
+
 .section.intro {
 	background: hotpink;
 	color:  white;
-	font-family: "Silverfake", sans-serif;
+	font-family: "Matchbook", sans-serif;
 }
 
 .section.intro p {
@@ -206,12 +203,12 @@ h1 {
   	background-blend-mode: screen, difference, lighten;
 }
 
-.section.email-signup {
+.email-signup {
 	background: palegoldenrod;
 	padding:  1em;
 }
 
-.section.email-signup h2 {
+.email-signup h2 {
 	color: orangered;
 	font-family: "Silverfake", sans-serif;
 	font-size: 1.8em; 
@@ -220,21 +217,10 @@ h1 {
 	text-align: center;
 }
 
-.section.email-signup .border {
+.email-signup .border {
 	border: 2px dotted goldenrod;
 	height: 100%;
 	width: 100%;
-}
-
-.has-inset-border:before {
-  content: " "; /* to ensure it displays */
-  position: absolute;
-  left: 1em;
-  right: 1em;
-  top: 1e;
-  bottom: 1em;
-  border: 2px dotted goldenrod;
-  pointer-events: none; /* user can't click on it */
 }
 
 .instagram {
@@ -262,6 +248,18 @@ h1 {
 .instagram h2 a:hover {
 	background: var(--bluesky);
 	color: var(--white);
+}
+
+.instagram h2 a.facebook-link {
+	font-size: .5em;
+}
+
+.contact-intro {
+	margin-bottom: 5em;
+}
+
+.order main {
+	position: relative;
 }
 
 /* Contact Form */
@@ -305,6 +303,13 @@ button, .button {
 	display: flex;
 	float: right;
 	padding: 6px 0;
+}
+
+.badge {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 7em;
 }
 
 @media screen and (min-width:768px) {
@@ -363,6 +368,7 @@ button, .button {
 	.left-side, .right-side {
 		display: grid;
 		justify-content: center;
+		position: relative;
 	}
 
 	.mobile-menu {
@@ -388,6 +394,13 @@ button, .button {
 
 	.medium-print h2 {
 		font-size:  1.6em;
+	}
+
+		.badge {
+		position: absolute;
+		top: -6em;
+		right: -2em;
+		width: 8em;
 	}
 
 }
