--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,7 +5,7 @@
 	<body class="{% if pageType %}{{ pageType }}{% endif %} {{ page.fileSlug }} {{ pageClasses }}">
 
         <header>
-            <div class="flex space-between full-width">
+            <div class="flex align-items-center space-between full-width">
                 <div class="main-link-container">
                     <a class="main-link" href="{{ '/' | url }}"><em>{{ metadata.title }}</em></a>
                 </div>
